Added Layouts and registration page

--- a/resources/views/user_portal/registration.jade
+++ b/resources/views/user_portal/registration.jade
@@ -1,6 +1,13 @@
-
+//output:registration.blade.php
 @extends('layouts.layout')
+
 @section('title', 'Registration')
+
+
 @section('content')
-<h1>It works!</h1>
-<div class="black-box"></div>@endsection
+h1 It works!
+
+
+.black-box
+
+@endsection
